more consistency added

--- a/assets/css/prevent.css
+++ b/assets/css/prevent.css
@@ -113,7 +113,7 @@
 .site h3{
 	width: 100%;
 	text-align: center;
-	background: #008377;
+	background: #9AD3CC;
 	color: #FFF;
 	height: 65px;
 	padding: 5px;
