--- a/assets/css/flu.css
+++ b/assets/css/flu.css
@@ -47,7 +47,8 @@
 .site h1{
 	margin-top: 20px;
 	text-align: center;
-	background-color:#9ad3cc;
+	background: #dfe675;
+	color: #008377;
 	padding: 5px 0px
 
 }
