--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,11 @@ h6 {
 }
 
 .boxing {
-	border: 2px solid #9AD3CC
+	border: 3px solid #9AD3CC
+}
+
+.boxingy {
+	border: 3px solid #dfe675
 }
 
 .placeholder {
@@ -310,6 +314,12 @@ h6 {
 	pointer-events: none;
 	opacity: 0.2;
 	width: 70px;
+}
+
+.boxtitledg{
+	color: white; 
+	background: #9AD3CC; 
+	padding: 10px
 }
 
 
