--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*By Leping Jiang Updated at 2020/04/14*/
+/*By Leping Jiang Updated at 2020/04/25*/
 
 
 /*preset*/
@@ -220,7 +220,7 @@ header ul li a img {
 }
 
 .a1 {
-	background: #9AD3CC;
+	background: #F5FBFE;
 	color: #004F46;
 }
 
@@ -241,6 +241,10 @@ header ul li a img {
 	padding: 10px 0px;
 }
 
+.p20{
+	padding: 20px;
+}
+
 .p30 {
 	padding: 30px 0px;
 }
@@ -255,6 +259,10 @@ header ul li a img {
 
 .p100 {
 	padding: 100px 0px;
+}
+
+.m10{
+	margin: 10px;
 }
 
 /*type*/
@@ -320,6 +328,26 @@ h6 {
 	color: white; 
 	background: #9AD3CC; 
 	padding: 10px
+}
+
+footer{
+	background: #9AD3CC;
+	border-radius: 10px;
+}
+
+footer div a{
+	color: #004F46;
+	font-size: 18px;
+	margin: 5px;
+}
+
+footer div a:hover{
+	background: #dfe675;
+	border-radius: 10px;
+}
+
+footer div{
+	margin: 15px
 }
 
 
@@ -545,4 +573,9 @@ h6 {
 		opacity: 0.2;
 		width: 70px;
 	}
+	
+	footer{
+	padding-top: 10px;
+}
+
 }
