--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@
 header {
 	position: relative;
 	background: #9AD3CC;
-	height: 70px;
+	height: 85px;
 }
 
 header h1 {
@@ -92,9 +92,9 @@ header h1 {
 }
 
 .logo {
-	padding-top: 5px;
+	padding-top: 8px;
 	padding-right: 20px;
-	width: 140px;
+	width: 160px;
 }
 
 
@@ -109,7 +109,7 @@ header h1 {
 }
 
 nav {
-	top: 11px;
+	top: 35px;
 	left: 10px;
 	position: relative;
 }
@@ -126,9 +126,9 @@ nav a {
 	text-decoration: none;
 	display: inline-block;
 	color: #004F46;
-	padding: 13px 15px;
-	padding-top: 17px;
-	border-radius: 0px;
+	padding: 5px 15px;
+	padding-top: 5px;
+	border-radius: 5px;
 }
 
 nav a:hover {
@@ -294,7 +294,7 @@ h6 {
 }
 
 .hpacccb {
-	font-size: 22px;
+	font-size: 26px;
 	font-weight: bold;
 }
 
@@ -385,7 +385,7 @@ footer div{
 	header {
 		position: relative;
 		background: #9AD3CC;
-		height: 60px;
+		height: 75px;
 	}
 
 	header h1 {
@@ -396,7 +396,7 @@ footer div{
 		padding-top: 5px;
 		padding-right: 20px;
 		margin-left: 10px;
-		width: 120px;
+		width: 150px;
 	}
 
 
@@ -434,7 +434,7 @@ footer div{
 		color: #004F46;
 		padding: 5px 13px;
 		padding-top: 5px;
-		border-radius: 0px;
+		border-radius: 5px;
 		margin-top: 17px
 	}
 
@@ -505,9 +505,13 @@ footer div{
 		padding: 5px;
 		left: 0px;
 		right: 0px;
-		top: 55px;
+		top: 75px;
 		height: 200px;
 
+	}
+	
+		header {
+		height: 75px;
 	}
 
 	nav li {
@@ -518,6 +522,7 @@ footer div{
 	nav a {
 		width: 100%;
 		border: none;
+		border-radius: 5px;
 	}
 
 	nav a:hover {
@@ -529,13 +534,13 @@ footer div{
 	#mb {
 		display: block;
 		position: absolute;
-		top: 15px;
+		top: 5px;
 		right: 20px;
 		color: #004F46;
 		padding: 7px;
 		border: 1px solid #004F46;
 		background: #F5FBFE;
-		font-size: 18px;
+		font-size: 32px;
 	}
 
 	#logo {
@@ -577,5 +582,9 @@ footer div{
 	footer{
 	padding-top: 10px;
 }
+	.m10{
+		margin: 20px 0px;
+
+	}
 
 }
