--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,9 +640,12 @@ footer div{
 		margin: 20px 0px;
 
 	}
+	.tm10{
+		margin: 10px 10px;
+	}
 	
 	footer div{
-	margin: 15px 0px;
+	margin: 15px 0px
 }
 
 }
